After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785934 - Find next with ctrl-g not working
Find next with ctrl-g not working
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
Flatpak Nightly Channel
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-07 09:17 UTC by Guillaume Pasquet
Modified: 2017-08-07 19:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
editor: fix search movements while focused in search entry (3.16 KB, patch)
2017-08-07 17:57 UTC, Christian Hergert
committed Details | Review
editor: keep search context around when there are matches (3.09 KB, patch)
2017-08-07 19:16 UTC, Christian Hergert
committed Details | Review

Description Guillaume Pasquet 2017-08-07 09:17:01 UTC
When editing a file, start searching text with ctrl-f. Then either:

- Press enter to validate search and hide the little search window
- Leave it open

Hit ctrl-G and nothing happens at all in both cases.

Tested with PHP files, Javascript files and Python files.
Comment 1 Christian Hergert 2017-08-07 17:19:30 UTC
Hrmm, I think this might be due to a performance improvement I made to avoid keeping the GtkSourceSearchSettings/Context around when the search box is not visible.

I would expect it to work when the search box is visible though. Hrmm...
Comment 2 Christian Hergert 2017-08-07 17:24:59 UTC
Until I get this fixed, a temporarily workflow change of using up/down on your keyboard while focused in the search box results in the expected movements.
Comment 3 Christian Hergert 2017-08-07 17:57:33 UTC
Created attachment 357135 [details] [review]
editor: fix search movements while focused in search entry

The GtkSearchEntry registers keybindings for ctrl+g/ctrl+shift+g to emit
the previous-match/next-match signals. We need to connect those to our
action implementations.
Comment 4 Christian Hergert 2017-08-07 17:58:07 UTC
Comment on attachment 357135 [details] [review]
editor: fix search movements while focused in search entry

Attachment 357135 [details] pushed as fca6e80 - editor: fix search movements while focused in search entry
Comment 5 Christian Hergert 2017-08-07 19:16:24 UTC
Created attachment 357138 [details] [review]
editor: keep search context around when there are matches

We might need to keep the search context around so that we can perform
next/previous match actions via keybindings. That adds a bit of overhead
in some cases, so we try to detect a few of those and still cleanup the
context when possible.
Comment 6 Christian Hergert 2017-08-07 19:16:46 UTC
Attachment 357138 [details] pushed as ac7b8f3 - editor: keep search context around when there are matches