editor: fix search movements while focused in search entry

The GtkSearchEntry registers keybindings for ctrl+g/ctrl+shift+g to emit
the previous-match/next-match signals. We need to connect those to our
action implementations.

https://bugzilla.gnome.org/show_bug.cgi?id=785934